@@ -6,7 +6,7 @@
 
     <groupId>org.g02</groupId>
     <artifactId>BTFDao</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>2.0-SNAPSHOT</version>
 
     <parent>
         <groupId>nl.fontys.sebivenlo</groupId>
@@ -34,4 +34,23 @@
             <version>42.2.19</version>
         </dependency>
     </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.22.1</version>
+                <configuration>
+                    <argLine>
+                        @{argLine} -ea --add-modules BTFDao --add-opens BTFDao/org.g02.btfdao.tests=ALL-UNNAMED
+                    </argLine>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.openjfx</groupId>
+                <artifactId>javafx-maven-plugin</artifactId>
+                <version>0.0.2</version>
+            </plugin>
+        </plugins>
+    </build>
 </project>
